[package]
name = "projson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
once_cell = "1.19.0"
windows-projfs = "0.1.7"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
