[package]
authors = ["Fxtack <fxtack@foxmail.com>"]
categories = ["command-line-utilities"]
description = "The program uses ProjFS to map json to file tree."
repository = "https://github.com/fxtack/projson"
license = "MIT"
name = "projson"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "1.8.0"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
once_cell = "1.19.0"
windows-projfs = "0.1.7"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"